# etl-update-bot

./: Cargo.toml  README.md  build.rs
configurations/client/: client.toml
configurations/server/: server.toml
proto/: update.proto
src/client/: configuration.rs  logger.rs  main.rs
src/client/api/: authorization.rs  mod.rs  updater.rs
src/client/discord/: mod.rs  path_container.rs  shard_container.rs
src/client/discord/commands/: mod.rs  update.rs
src/server/: configuration.rs  main.rs
src/server/api/: authorization.rs  mod.rs  updater.rs
