[package]
authors = [ "Keith Miller <keithmss@icloud.com>" ]
name    = "etl-update-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "etl-update-client"
path = "src/client/main.rs"

[[bin]]
name = "etl-update-server"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = "1.0.53"
clap               = "3.1.2"
futures            = "0.3.21"
hyper              = "0.14.17"
prost              = "0.9.0"
serde              = "1.0.136"
serenity           = { version = "0.10.10", features = ["framework", "standard_framework"] }
tokio              = { version = "1.17.0", features = ["fs", "process", "macros", "rt-multi-thread", "signal"] }
tonic              = "0.6.2"
toml               = "0.5.8"
tower              = "0.4.12"
tracing            = "0.1.30"
tracing-subscriber = "0.3.8"

[build-dependencies]
tonic-build = "0.6.2"
